# smart-learner-agent2

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/agents/: __init__.py
backend/agents/base/: __init__.py  teaching_agent_interface.py  utility_agent_interface.py
backend/agents/react/: __init__.py  content_validator_agent.py  knowledge_assessor_agent.py  mnemonic_generator_agent.py  mnemonic_models.py  progress_tracker_agent.py  socratic_teacher_agent.py  tool_executor.py
backend/agents/teaching/: __init__.py  lecture_teaching_agent.py  socratic_teacher_adapter.py
backend/agents/tools/: __init__.py  content_validator_tools.py  knowledge_assessor_tools.py  mnemonic_generator_tools.py  progress_tracker_tools.py  socratic_teacher_tools.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  connection.py  drop_schema.sql  sample_data.sql  sample_data_law.sql  sample_data_python.sql  schema.sql
backend/models/: __init__.py  base.py  learner.py  session.py  teaching_mode.py  tenant.py  topic.py
backend/services/: __init__.py  database.py  vector_search.py
backend/workflows/: __init__.py  state.py  teaching_workflow.py
cli/: __init__.py  main.py
tests/test_agents/: test_p0_knowledge_gap_fix.py  test_stage2_agents.py
tests/test_react_agents/: __init__.py  test_mnemonic_generator_complete.py  test_react_agents.py  test_tools.py
tests/test_workflows/: test_main_workflow.py  test_new_nodes.py
